--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, “Helvetica Neue”, Helvetica, sans-serif;
   font-size: 18px;
   line-height: 34px;
   color: #777;
-  background: url("../images/concrete_seamless.png");
+  background: url(“../images/concrete_seamless.png”);
 }
 
 * {
@@ -33,9 +33,9 @@ p:last-child {
 h1,
 h2,
 h3 {
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: Georgia, Times, “Times New Roman”, serif;
   font-weight: 700;
-  color: #4aaaa5;
+  color: #4aaaa5 ;
 }
 
 h1 {
@@ -67,19 +67,20 @@ h3 {
   float: left;
   width: 250px;
   height: 90px;
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: Georgia, Times, “Times New Roman”, serif;
   font-size: 30px;
   font-weight: 700;
   line-height: 90px;
   color: #fff;
   text-align: center;
   text-decoration: none;
-  background: #4aaaa5;
+  background: #4aaaa5 ;
 }
 
 nav {
   float: right;
   margin-top: 25px;
+  margin: 25px 25px 0;
 }
 
 nav a {
@@ -89,7 +90,7 @@ nav a {
   line-height: 18px;
   color: #999;
   text-decoration: none;
-  border-left: 1px solid #efefef;
+  border-left: 1px solid #efefef ;
 }
 
 nav a:first-child {
@@ -106,7 +107,7 @@ footer {
   color: #ccc;
   text-align: center;
   background: #666;
-  border-top: 8px solid #4aaaa5;
+  border-top: 8px solid #4aaaa5 ;
 }
 
 /* sidebar */
@@ -186,7 +187,7 @@ h3,
   line-height: 30px;
   color: #fff;
   text-align: center;
-  background: #4aaaa5;
+  background: #4aaaa5 ;
   border-bottom: 0;
 }
 
@@ -234,31 +235,108 @@ input[type=submit] {
   font-size: 18px;
   color: #fff;
   cursor: pointer;
-  background: #4aaaa5;
+  background: #4aaaa5 ;
   border: 0 none;
 }
 
-
 /*MEDIA QUERIS*/
+@media screen and (max-width: 980px) {
+    .main-section { 
+        width: 100%;
+        
+    }
+    .container {
+        width: 90%;
+        max-width: 960px;
+        /*margin: 0 auto;
+        clear: both;*/
+    }
+    .sidebar{
+        float: left;
+        max-width: 650px;
+        padding: 30px;
+        margin-bottom: 20px;
+        background: #fff;
+        border: 1px solid #ddd;
+        
+    }
 
+     nav {
+         float: right;
+    }
 
-
+  @media screen and (max-width: 768px) {
+    .main-section {
+    float: right;
+    width: 100%;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #fff;
+    border: 1px solid #ddd;
+        } 
  
 
  @media screen and (max-width: 640px) {
-    .container {
-        background: lightgrey;
-    }
-}
+  #main-container {
+  padding-top: 20px;
+  }
+  .main-section {
+    margin-bottom: 30px;
+    margin-top: 0px;
+    width: 640px;
+    max-width: 100%;
+    
+  }
+  #masthead {
+    position: relative;
+    top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 640px;
+    margin-bottom: 0px;
+  }
+  nav {
+    width: 100%;
+    margin-top: 15px;
+    margin-bottom: 20px; 
+    font-family: Arial, “Helvetica Neue”, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777;
+    text-align: center;
+  }
+  
+  #logo { 
+    width: 100%;
+    height: 90px;
+    max-width: 640px;
+    font-family: Georgia, Times, “Times New Roman”, serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 90px;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    background: #4aaaa5;
+  }
+  .auth-image {
+    float: left;
+    width: 100%;
+    max-width: 575px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 15px;
+  }
+  
+  .sidebar {
+    float: left;
+    width: 100%;
+  
 
-@media screen and (max-width: 768px) {
-    .container {
-        background: blue;
-    }
+  
+  padding: 30px;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
 }
-
-@media screen and (max-width: 980px) {
-    .container {
-        background: lightgrey;
-    }
-}  
+    
